[gd_scene load_steps=3 format=3 uid="uid://ctmnx2r2g6xk6"]

[ext_resource type="Script" path="res://Scripts/Pause.gd" id="1_qht4b"]
[ext_resource type="FontFile" uid="uid://1lxsncmfgwoc" path="res://Fonts/Gerhaus-PK69E.ttf" id="2_jue7k"]

[node name="Pause" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qht4b")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
alignment = 1

[node name="Resume" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_jue7k")
text = "Resume"

[node name="Options" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_jue7k")
text = "Options"

[node name="Main Menu" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_jue7k")
text = "Main menu"

[connection signal="pressed" from="VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Main Menu" to="." method="_on_main_menu_pressed"]
